feat: add HmacSettings section for HMAC secret key configuration

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -8,6 +8,9 @@
     "Audience": "PayWarden.Client",
     "ExpiryMinutes": 60
   },
+  "HmacSettings": {
+    "Secret": "YOUR_HMAC_SECRET_KEY_MINIMUM_32_CHARACTERS_LONG"
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
     "MinimumLevel": {
