feat: add PaystackSettings section to appsettings.json for configuration

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -11,6 +11,11 @@
   "HmacSettings": {
     "Secret": "YOUR_HMAC_SECRET_KEY_MINIMUM_32_CHARACTERS_LONG"
   },
+  "PaystackSettings": {
+    "SecretKey": "YOUR_PAYSTACK_SECRET_KEY",
+    "PublicKey": "YOUR_PAYSTACK_PUBLIC_KEY",
+    "BaseUrl": "https://api.paystack.co"
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
     "MinimumLevel": {
