--- a/paywarden-web/package.json
+++ b/paywarden-web/package.json
@@ -31,29 +31,35 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-refresh": "^0.4.12",
+
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.49.0",
+
+    "globals": "^16.5.0",
+
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+
     "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^7.2.7",
+    "vitest": "^4.0.15",
     "@vitest/ui": "^4.0.15",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.39.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^16.5.0",
-    "jiti": "^2.6.1",
+
     "jsdom": "^25.0.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/jest-dom": "^6.9.1",
+
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.49.0",
-    "vite": "^7.2.7",
-    "vitest": "^4.0.15"
+
+    "jiti": "^2.6.1"
   }
+
 }
